# dms-backend-template

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/: cloud.toml  default.toml  local.toml.example  onprem.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  extract.rs  health.rs  lib.rs  state.rs
crates/api/src/v1/: auth.rs  mod.rs  orgs.rs  projects.rs
crates/application/: Cargo.toml
crates/application/src/: auth.rs  dto.rs  field_perms.rs  lib.rs  orgs.rs  project.rs  token.rs
crates/application/src/port/: auth.rs  health.rs  mod.rs  storage.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  error.rs  id.rs  ids.rs  lib.rs  pagination.rs  telemetry.rs
crates/domain/: Cargo.toml
crates/domain/src/: iam.rs  lib.rs  orgs.rs  ports.rs  project.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: audit.rs  health.rs  lib.rs  orgs.rs  outbox.rs  project.rs  storage.rs
crates/infrastructure/src/auth/: hasher.rs  jwt.rs  mod.rs  platform.rs
crates/infrastructure/src/db/: mod.rs  tenant.rs
crates/infrastructure/src/iam/: bootstrap.rs  mod.rs  repos.rs  seed.rs
crates/infrastructure/tests/: integration.rs
deploy/compose/: cloud.yml  onprem.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/docker/initdb/: 01-app-role.sql
deploy/helm/dms-backend/: Chart.yaml  values-cloud.yaml  values-onprem.yaml  values.yaml
deploy/helm/dms-backend/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: README.md  architecture.md  deployment.md  development.md  tiers.md
docs/adr/: 0001-record-architecture-decisions.md  0002-tech-stack.md  0003-multi-tenancy-rls.md  0004-identity-federation.md  0005-feature-tiers.md  0006-org-hierarchy-and-scoped-permissions.md  template.md
docs/notes/: datasets-huggingface-reference.md  field-permissions-and-custom-entities.md  prd-gap-analysis.md
migrations/audit/: 0300_audit_outbox.sql
migrations/auth/: 0200_iam.sql
migrations/core/: 0001_init.sql
migrations/orgs/: 0500_orgs.sql
migrations/project/: 0400_projects.sql  0401_project_members.sql
migrations/tenancy/: 0100_tenancy.sql
