[package]
name = "dms-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
dms-core.workspace = true
dms-config.workspace = true
dms-application.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
metrics-exporter-prometheus.workspace = true
uuid = { workspace = true, optional = true }
dms-domain = { workspace = true, optional = true }

[features]
# 身份联合相关：鉴权提取器 + /v1/auth 路由 + AppState.auth。
auth = ["dms-application/auth", "dep:uuid"]
# Project 参考切片：/v1/projects 路由 + AppState.projects。
project = ["auth", "dms-application/project", "dep:dms-domain", "dms-domain/project"]
# 组织架构：/v1/orgs、/v1/teams、成员、角色授予路由 + AppState.orgs。
orgs = ["auth", "dms-application/orgs", "dep:dms-domain", "dms-domain/orgs"]
# 对象存储：AppState.storage（供业务文件管理使用）。
storage = ["dms-application/storage"]
