[package]
name = "dms-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
dms-core.workspace = true
async-trait.workspace = true
dms-domain = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[features]
# 身份联合与会话用例。无此 feature 时仅保留通用端口（如 HealthProbe）。
auth = [
    "dep:dms-domain",
    "dms-domain/auth",
    "dep:serde",
    "dep:serde_json",
    "dep:chrono",
    "dep:uuid",
    "dep:sha2",
    "dep:hex",
]
# Project 参考切片用例。
project = ["auth", "dms-domain/project"]
# 组织架构用例 + 作用域权限解析。
orgs = ["auth", "dms-domain/orgs"]

[dev-dependencies]
tokio = { workspace = true }
