[package]
name = "dms-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
dms-core.workspace = true
serde.workspace = true
figment.workspace = true
thiserror.workspace = true
